# KMC-DataFrame

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conda_setup.py  environment.yml  pyproject.toml
diagnostics/: check_install.py
kmc_core/: kb_completer.cpp  kb_completer.h  kb_sorter.h  kmc.h  kmc_runner.h  kxmer_set.h  raduls_impl.h
kmcpy/: __init__.py  __main__.py  _core.cpp  _version.py
tests/kmcpy/: README.md  sample.fasta  sample_usage.py  test_kmcpy.py  tests_README.md
